--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimal-ui">
+    <link rel="stylesheet" href="static/css/reset.css">
     <title>vuedemo</title>
 </head>
 
