--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimal-ui">
-    <link rel="stylesheet" href="static/css/reset.css">
-    <title>vuedemo</title>
-</head>
-
-<body>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="shortcut icon" href="../static/logo.png" type="image/x-icon">
+    <title>mint-ui-demo</title>
+  </head>
+  <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-</body>
+  </body>
 </html>
