--- a/src/pages/movie/movie.html
+++ b/src/pages/movie/movie.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>another</title>
+  <title>movie</title>
 </head>
 <body>
-  另外一个页面!
+  <div id="app"></div>
 </body>
 </html>
